# Receipt-Processor

./: .gitignore  database.py  llm_pdf_to_text.py  pdf_to_image.py  pdf_to_png.py  png_to_text.py  pyproject.toml  receipts.db  test_db.py
texts/: 10_page1.txt  11_page1.txt  12_page1.txt  13_page1.txt  14_page1.txt  15_page1.txt  16_page1.txt  17_page1.txt  18_page1.txt  19_page1.txt  1_page1.txt  20_page1.txt  21_page1.txt  22_page1.txt  23_page1.txt  24_page1.txt  25_page2.txt  25_page3.txt  26_page1.txt  27_page1.txt  28_page1.txt  29_page1.txt  2_page1.txt  30_page1.txt  31_page1.txt  31_page2.txt  32_page1.txt  33_page1.txt  34_page1.txt  35_page1.txt  36_page2.txt  37_page2.txt  39_page1.txt  3_page1.txt  40_page1.txt  41_page1.txt  42_page1.txt  43_page1.txt  44_page1.txt  45_page1.txt  (+50 more)
texts2/: 10_page1.json  11_page1.json  12_page1.json  13_page1.json  14_page1.json  15_page1.json  16_page1.json  17_page1.json  18_page1.json  19_page1.json  1_page1.json  20_page1.json  21_page1.json  22_page1.json  23_page1.json  24_page1.json  25_page1.json  25_page2.json  25_page3.json  26_page1.json  27_page1.json
validation_texts/: online_order_receipt_1.json  online_order_receipt_2.json  receipt_1.json  receipt_2.json  receipt_3.json  receipt_4.json  receipt_5.json
