[project]
name = "receipt-processor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "easyocr>=1.7.2",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pathlib>=1.0.1",
    "pdf2image>=1.17.0",
    "pillow>=12.1.1",
    "pymupdf>=1.27.2.2",
    "regex>=2026.2.28",
]
