[project]
name = "receipt-processor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.3",
    "ollama>=0.6.1",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.1",
    "pathlib>=1.0.1",
    "pdf2image>=1.17.0",
    "pillow>=12.1.1",
    "pymupdf>=1.27.2.2",
    "regex>=2026.2.28",
    "setuptools>=81.0.0",
    "tqdm>=4.67.3",
]
